<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Calibre Sync</string>
    <string name="service_name" translatable="false">Calibre Service</string>
    <string name="menu_disconnect">End Connection</string>
    <string name="menu_rediscover">Rediscover Servers</string>
    <string name="menu_manual_connection">Manual Connection</string>
    <string name="menu_goback">Go Back</string>
    <string name="menu_collection_tags">Filter By Tags</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_collection_books">Show Books</string>
    <string name="tab_collection">Device Library</string>
    <string name="tab_connection">Connection</string>
    <string name="tab_library">Calibre Library</string>
    <string name="connection_unresolved_ip">Unable to resolve host. Check your connection settings.</string>
    <string name="connection_communicating">Communicating with %s</string>
    <string name="connection_connecting">Connecting to %s</string>
    <string name="connection_connected">Connected to %s</string>
    <string name="connection_disconnected">Disconnected</string>
    <string name="connection_calibre_busy">Calibre is busy. Connection Refused.</string>
    <string name="dialog_title_connection_settings">Connection Settings</string>
    <string name="dialog_button_retry">Retry</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_connect">Connect</string>
    <string name="dialog_noserv_title">No Calibre Servers Found</string>
    <string name="dialog_noserv_message">Check that your Calibre Server is running, that the proper ports are open and then retry.</string>
    <string name="dialog_deletefile_message">Are you sure you want to delete this file?</string>
    <string name="dialog_hint_password">Password</string>
    <string name="dialog_hint_host">Hostname or IP</string>
    <string name="dialog_hint_wd_port">Wireless Device Port</string>
    <string name="dialog_hint_cs_port">Content Server Port</string>
    <string name="dialog_downloading_book">Downloading Book</string>
    <string name="log_disc_working">Searching for Calibre Servers within WiFi network</string>
    <string name="log_uploading_file">Uploading file to Calibre</string>
    <string name="log_wait_for_drive">Scanning filesystem</string>
    <string name="log_error_dlfile">Error with downloading file. Re-launch application and try again.</string>
    <string name="log_err_wrong_password">Wrong password entered. Please try again.</string>
    <string name="log_unable_to_connect">Unable to connect to host. Check your network configuration.</string>
    <string name="toast_no_app_installed">No compatible application installed to read this file!</string>
    <string name="toast_root_folder_renamed">Renamed Root Folder. Book list is still the same</string>
    <string name="toast_root_folder_changed">Changed Root Folder. Book list is now different</string>
    <string name="toast_download_cancelled">Error with downloading file. Please try again</string>
    <string name="log_error_root_folder_noread">Error: Cannot read Root Folder. Change the Root Folder</string>
    <string name="note_received">Book Received</string>
    <string name="note_updated">Book Updated</string>
    <string name="pref_autocon_title">Enable Auto Connect</string>
    <string name="pref_autocon_summary">Connects to Calibre Library when Wi-Fi is in range</string>
    <string name="pref_wd_address_title">Wireless Device Server Address</string>
    <string name="pref_cs_url_title">Content Server URL</string>
    <string name="pref_rootdir_title">Root Directory</string>
    <string name="pref_rootdir_dialog">Directory must end with slash /</string>
    <string name="pref_debug_title">Show Debug</string>
    <string name="pref_debug_summary">Select for debug messages to appear in the Connection Tab</string>
    <string name="pref_filetypes_title">Accepted Filetypes</string>
    <string name="pref_filetypes_dialog">Please provide a space separated list of accepted file extensions</string>
    <string name="pref_version_name" translatable="false">Calibre Sync Version</string>
    <string name="opds_loading">Currently loading %s</string>
    <string name="opds_more">More...</string>
    <string name="apprater_title">Rate Calibre Sync</string>
	<string name="apprater_text">Do you like Calibre Sync? Please post a review. Thank you!</string>
	<string name="apprater_b1">Sure! I\'ll rate Calibre Sync</string>
	<string name="apprater_b2">Maybe later</string>
	<string name="apprater_b3">No, thanks</string>
    <string name="goodreads_key" translatable="false">Q2Z80mybeO7cQ6NbvZgREQ</string>
    <string name="search_hint">Search Books</string>


</resources>
