<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menu_collection_tags"
            android:icon="@drawable/ic_menu_tags"
            android:title="@string/menu_collection_tags"
            android:showAsAction="ifRoom|withText"></item>

    <item
            android:id="@+id/menu_search"
            android:title="@string/menu_search"
            android:icon="@drawable/ic_menu_search"
            android:showAsAction="ifRoom|collapseActionView"
            android:actionViewClass="android.widget.SearchView"
            />
    <item
            android:id="@+id/menu_collection_books"
            android:title="@string/menu_collection_books"
            android:icon="@drawable/ic_tab_collection"/>
</menu>
